--- a/examples/index.html
+++ b/examples/index.html
@@ -117,7 +117,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>react-pivottable</h1>
+        <h1>Focus Forge Pivot Tool</h1>
         <p>React-based drag'n'drop pivot table with Plotly.js charts.</p>
         <p><a class="btn btn-primary btn-lg" href="https://github.com/plotly/react-pivottable#readme" role="button">Get started &raquo;</a></p>
       </div>
@@ -130,7 +130,7 @@
 
       <hr>
       <footer align="center">
-        <p>&copy; 2017 Plotly</p>
+        <p>&copy; @ Dustin Schiffer</p>
       </footer>
     </div> <!-- /container -->
 
